--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,11 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Predictions</title>
+  <title>ChatPMC</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+  
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
